# RiSC16--Archi-Proj-2-

./: CMakeLists.txt  README.md  Simulation.docx  main.cpp  readme.txt
Journals/: Laila N ElKoussy_900160812.txt  Laila_N_ElKoussy_900160812.txt  Yahia_Farid_900161331.txt  Yousef_Koura_900160083.txt
Source/: ADD.h  ADDI.h  BEQ.h  Inst1OP.cpp  Inst1OP.h  Inst2OP.cpp  Inst2OP.h  Inst3OP.cpp  Inst3OP.h  Instruction.cpp  Instruction.h  JALR.h  JMP.h  LW.h  MUL.h  Main.cpp  Memory.h  NAND.h  RET.h  SIM.cpp  SIM.h  SUB.h  SW.h
Test/: LoopTest.txt  Sample1.txt  Sample2.txt  Test1.txt  Test2.txt  basictest.txt
source files/: ADDI.h  Inst2OP.cpp  Inst2OP.h  Inst3OP.h  JALR.h  JMP.h  LW.h  Main.cpp  Memory.h  NAND.h  RET.h  SIM.cpp  SIM.h  SUB.h  SW.h  file1.txt
